--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,10 @@
 .container {
-    background-color: rgb(165, 95, 95);
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-rows: repeat(2, 1fr);
     width: 1000px;
     margin: 30px auto;
+    background-color: rgb(165, 95, 95);
   }
   
   .item {
@@ -12,6 +15,9 @@
 
   .item--1 {
     background-color: orange;
+    grid-row: 2/3;
+    grid-column: 2/3;
+    z-index: 1;
   }
 
   .item--2 {
@@ -20,6 +26,8 @@
 
   .item--3 {
     background-color: Violet;
+    grid-row: 2/2;
+    grid-column: 1/3;
   }
 
   .item--4 {
@@ -29,7 +37,7 @@
   .item--5 {
     background-color: blue;
   }
-  
+
   .item--6 {
     background-color: brown;
   }
